Removed unnecessary comments

--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@
     <title>Responsive Webpage</title>
 </head>
 <body>
-    <!-- <nav>
-        <ul class="topnav">
-            <li class="left"><a href="#home">SoundAMP</li>      
-        <li><a href="#news">News</li>
-            <li><a href="#contact">Contact</li>
-            <li><i class="fab fa-twitter"></i></li>
-            
-        </ul>
-    </nav> -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
           <div class="navbar-header">
@@ -43,7 +34,7 @@
               <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
               <li><a href="#"><i class="fa fa-pinterest fa-lg"></i></a></li> 
             </ul>
-          </div><!--/.nav-collapse -->
+          </div>
        </div>
      </nav>
     <main>
