Fixed issues with alignment of banner and cards

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <title>Responsive Webpage</title>
   </head>
   <body>
+
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -66,14 +67,15 @@
         </div>
       </div>
     </nav>
+
     <main>
       <section class="row">
         <div class="column gallery" id="highlight">
           <img src="assets/images/pic-top.PNG" alt="Cinque Terre" />
         </div>
-      </section>
-      <section class="row">
-        <div class="gallery column">
+      <!-- </section>
+      <section class="row"> -->
+        <div class="gallery column" id="left-most">
           <img src="assets/images/pic1.PNG" alt="Cinque Terre" height="250" />
 
           <div class="desc">
@@ -85,7 +87,7 @@
           </div>
         </div>
 
-        <div class="gallery column">
+        <div class="gallery column" id="second-left">
           <img src="assets/images/pic2.PNG" alt="Forest" height="250" />
 
           <div class="desc">
@@ -97,7 +99,7 @@
           </div>
         </div>
 
-        <div class="gallery column">
+        <div class="gallery column" id="second-right">
           <img
             src="assets/images/pic3.PNG"
             alt="Northern Lights"
@@ -113,7 +115,7 @@
           </div>
         </div>
 
-        <div class="gallery column">
+        <div class="gallery column" id = "right-most">
           <img
             src="assets/images/pic4.PNG"
             alt="Northern Lights"
