Changed placeholder text for heading,date and tags

--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
         <div class="column gallery" id="highlight">
           <img src="assets/images/pic-top.PNG" alt="Cinque Terre" />
         </div>
-      <!-- </section>
-      <section class="row"> -->
+      </section>
+      <section class="row">
         <div class="gallery column" id="left-most">
           <img src="assets/images/pic1.PNG" alt="Cinque Terre" height="250" />
 
           <div class="desc">
-            {date}<br />
-            <h2>{Heading}</h2>
-            {hashtags here}<br />
-            Lorem ipsum dolor, sit amet consectetur adipisicing <br />
+            20/09/2021<br />
+            <h3>Night Laser Show</h3>
+            #dance #music #live #rock<br />
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing</p> 
             <button class="see-more">See more...</button>
           </div>
         </div>
@@ -91,10 +91,10 @@
           <img src="assets/images/pic2.PNG" alt="Forest" height="250" />
 
           <div class="desc">
-            {date}<br />
-            <h2>{Heading}</h2>
-            {hashtags here}<br />
-            Lorem ipsum dolor, sit amet consectetur adipisicing <br />
+            22/09/2021<br />
+            <h3>Live Music</h3>
+            #dance #music #rock #hip-hop<br />
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing</p> 
             <button class="see-more">See more...</button>
           </div>
         </div>
@@ -107,10 +107,10 @@
           />
 
           <div class="desc">
-            {date}<br />
-            <h2>{Heading}</h2>
-            {hashtags here}<br />
-            Lorem ipsum dolor, sit amet consectetur adipisicing <br />
+            23/09/2021<br />
+            <h3>DJ-Master Class</h3>
+            #music #live #rock #hip-hop<br />
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing</p> 
             <button class="see-more">See more...</button>
           </div>
         </div>
@@ -123,10 +123,10 @@
           />
 
           <div class="desc">
-            {date}<br />
-            <h2>{Heading}</h2>
-            {hashtags here}<br />
-            Lorem ipsum dolor, sit amet consectetur adipisicing <br />
+            23/09/2021<br />
+            <h3>Best Night Party</h3>
+            #dance #music #rock <br/>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing</p>
             <button class="see-more">See more...</button>
           </div>
         </div>
