Changed code to position text over image

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     <main>
       <section class="row">
         <div class="column gallery" id="highlight">
-          <img src="assets/images/pic-top.PNG" alt="Cinque Terre" />
+          <img src="assets/images/galaxy.jpg" alt="Cinque Terre" />
+          <div class="text-on-image">All Events</div>
         </div>
       </section>
       <section class="row">
